--- a/index.html
+++ b/index.html
@@ -1,1 +1,146 @@
-<h1>开始</h1>
+<!-- 解决data在php中报错 -->
+<?php  date_default_timezone_set('PRC'); ?>
+
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>深度在线</title>
+		<link rel="shortcut icon" href="https://www.baidu.com/favicon.ico" type="image/x-icon" />
+		<style>
+			html,
+			body {
+				padding: 0;
+				margin: 0;
+				background: #272727;
+				font: 400 16px/1.7 "Microsoft JhengHei", sans-serif;
+			}
+
+			div,
+			ul,
+			li,
+			h1,
+			p,
+			h2 {
+				padding: 0;
+				margin: 0;
+			}
+
+			ul,
+			li {
+				list-style: none;
+			}
+
+			.main {
+				text-align: center;
+			}
+
+			.content {
+				background: #fff;
+				padding: 20px;
+				display: inline-block;
+			}
+
+			.content-top {
+				font-size: 14px;
+			}
+
+			.content-top h2 {
+				background: #FF8901;
+				color: #fff;
+				font-size: 20px;
+				padding: 10px 0;
+				font-weight: normal;
+			}
+
+			.content-top a {
+				display: block;
+				color: #FF8901;
+				font-style: normal;
+				display: block;
+				margin: 2px 0;
+			}
+
+			.content-top li {
+				padding: 20px 0;
+				border-bottom: 1px solid #E2E0DE
+			}
+
+			.main h1 {
+				color: #FF8901;
+				font-weight: normal;
+				padding: 40px 0;
+			}
+		</style>
+	</head>
+
+	<body>
+		<div class="main">
+			<h1>深度在线导航 | 导航地址发布页20190601</h1>
+			<div class="content">
+				<div class="content-top">
+					<h2>Ctrl+D 收藏本页</h2>
+					<ul>
+						<li>
+							骑虎精品影库最新地址
+							<a href="https://www.29qihu.com" target="_blank">https://29qihu.com</a>
+							<a href="https://www.10qihu.com" target="_blank">https://10qihu.com</a>
+							<a href="https://www.98xmv.com" target="_blank">https://98xmv.com</a>
+						</li>
+						<li>
+							扒酷虎精品影库最新地址
+							<a href="https://www.19kuhu.com" target="_blank">https://www.19kuhu.com</a>
+							<a href="https://www.18kuhu.com" target="_blank">https://www.18kuhu.com</a>
+						</li>
+						<li>
+							骑虎精品影库发布页
+							<a href="https://www.qihukuhu.com" target="_blank">https://www.qihukuhu.com</a>
+						</li>
+						<li>
+							骑虎精品影库备用地址
+							<a id='go' href="https://www.22qihu.com" target="_blank">https://www.22qihu.com</a>
+							<a id='go' href="https://www.10qihu.com" target="_blank">https://www.10qihu.com</a>
+							<script>
+								setTimeout(function() {
+									document.getElementById('go').click();
+								}, 100000)
+							</script>
+						</li>
+
+					</ul>
+					<p>如果以上地址均无法打开，欢迎发送邮件告知： <br>
+						waxuan@deepin.online<br>
+						会自动回复最新地址！</p>
+				</div>
+			</div>
+		</div>
+	</body>
+</html>
+>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
+</html>
+
