--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- 解决data在php中报错 -->
-<?php  date_default_timezone_set('PRC'); ?>
-
-
 <!DOCTYPE html>
 <html>
 	<head>
@@ -83,64 +79,32 @@
 					<h2>Ctrl+D 收藏本页</h2>
 					<ul>
 						<li>
-							骑虎精品影库最新地址
-							<a href="https://www.29qihu.com" target="_blank">https://29qihu.com</a>
-							<a href="https://www.10qihu.com" target="_blank">https://10qihu.com</a>
-							<a href="https://www.98xmv.com" target="_blank">https://98xmv.com</a>
+							常用
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
 						</li>
 						<li>
 							扒酷虎精品影库最新地址
-							<a href="https://www.19kuhu.com" target="_blank">https://www.19kuhu.com</a>
-							<a href="https://www.18kuhu.com" target="_blank">https://www.18kuhu.com</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
 						</li>
 						<li>
 							骑虎精品影库发布页
-							<a href="https://www.qihukuhu.com" target="_blank">https://www.qihukuhu.com</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
 						</li>
 						<li>
 							骑虎精品影库备用地址
-							<a id='go' href="https://www.22qihu.com" target="_blank">https://www.22qihu.com</a>
-							<a id='go' href="https://www.10qihu.com" target="_blank">https://www.10qihu.com</a>
-							<script>
-								setTimeout(function() {
-									document.getElementById('go').click();
-								}, 100000)
-							</script>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
+							<a href="https://docs.qq.com" target="_blank">腾讯文档</a>
 						</li>
 
 					</ul>
 					<p>如果以上地址均无法打开，欢迎发送邮件告知： <br>
 						waxuan@deepin.online<br>
-						会自动回复最新地址！</p>
+						自动回复最新导航！</p>
 				</div>
 			</div>
 		</div>
 	</body>
 </html>
->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
-
