--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 	</head>
-	<body>
+	<body style="background: #272727;">
 
 		<div class="container">
-			<h2 style="text-align: center;">深度在线导航</h2>
+			<h2 style="text-align: center;color: #FF8901;">深度在线导航</h2>
 			<br>
 			<!-- Nav tabs -->
 			<div class="d-flex justify-content-center">
