--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<script src="https://cdn.staticfile.org/popper.js/1.12.5/umd/popper.min.js"></script>
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 	</head>
-	<body style="background: #272727;">
+	<body>
+<!-- style="background: #272727;" -->
 
 		<div class="container">
 			<h2 style="text-align: center;color: #FF8901;">深度在线导航</h2>
