--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 		<script src="https://cdn.staticfile.org/twitter-bootstrap/4.1.0/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-<!-- style="background: #272727;" -->
-
 		<div class="container">
-			<h2 style="text-align: center;color: #FF8901;">深度在线导航</h2>
+			<h2 style="text-align: center;color: #FF8901; padding: 20px;">深度在线导航</h2>
 			<br>
 			<!-- Nav tabs -->
 			<div class="d-flex justify-content-center">
@@ -49,44 +47,83 @@
 			<div class="tab-content">
 				<div id="Home" class="container tab-pane active"><br>
 					<h3>HOME</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-						magna aliqua.</p>
+					<div style="text-align: center;">
+						<a href="https://map.qq.com/" target="_blank" style="padding: 10px;">腾讯地图</a>
+						<a href="https://pay.weixin.qq.com" target="_blank" style="padding: 10px;">微信支付</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+					</div>
 				</div>
 				<div id="Handy" class="container tab-pane fade"><br>
 					<h3>Menu 1</h3>
-					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<!-- 折叠菜单开始 -->
+					<div id="accordion">
+						<div class="card">
+							<a class="card-link card-header" data-toggle="collapse" href="#collapseOne">
+								选项一
+							</a>
+							<div id="collapseOne" class="collapse show" data-parent="#accordion">
+								<div class="card-body">
+									#1 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTwo">
+								选项二
+							</a>
+							<div id="collapseTwo" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#2 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseThree">
+								选项三
+							</a>
+							<div id="collapseThree" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-				<div id="Work" class="container tab-pane fade"><br>
-					<h3>Menu 2</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
-				<div id="Fun" class="container tab-pane fade"><br>
-					<h3>Fun</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
-				<div id="Request" class="container tab-pane fade"><br>
-					<h3>Request</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
-				<div id="Issues" class="container tab-pane fade"><br>
-					<h3>Issues</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
-				<div id="Marketplace" class="container tab-pane fade"><br>
-					<h3>Marketplace</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
-				<div id="Explore" class="container tab-pane fade"><br>
-					<h3>Explore</h3>
-					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-						aperiam.</p>
-				</div>
+				<!-- 折叠菜单结束 -->
 			</div>
+			<div id="Work" class="container tab-pane fade"><br>
+				<h3>Menu 2</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam remaperiam.</p>
+			</div>
+			<div id="Fun" class="container tab-pane fade"><br>
+				<h3>Fun</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+					aperiam.</p>
+			</div>
+			<div id="Request" class="container tab-pane fade"><br>
+				<h3>Request</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+					aperiam.</p>
+			</div>
+			<div id="Issues" class="container tab-pane fade"><br>
+				<h3>Issues</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+					aperiam.</p>
+			</div>
+			<div id="Marketplace" class="container tab-pane fade"><br>
+				<h3>Marketplace</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+					aperiam.</p>
+			</div>
+			<div id="Explore" class="container tab-pane fade"><br>
+				<h3>Explore</h3>
+				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+					aperiam.</p>
+			</div>
+		</div>
 		</div>
 
 	</body>
