--- a/waterfall/index3.html
+++ b/waterfall/index3.html
@@ -4,24 +4,25 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>图片网格瀑布流布局和打开图片动画特效</title>
+	<title>图片网格瀑布流布局和打开图片动画特效|DEMO3</title>
+	
 	<link rel="stylesheet" type="text/css" href="http://www.jqhtml.com/jquery/font-awesome.4.6.0.css">
 	<link rel="stylesheet" type="text/css" href="css/default.css">
-	<link rel="stylesheet" type="text/css" href="css/style1.css" />
+	<link rel="stylesheet" type="text/css" href="css/style3.css" />
 	<script src="js/modernizr-custom.js"></script>
 	<!--[if IE]>
 		<script src="http://libs.baidu.com/html5shiv/3.7/html5shiv.min.js"></script>
 	<![endif]-->
 </head>
-<body class="demo-1">
+<body class="demo-3">
 	<div class="container">
 		<header class="jqthml-header">
 			<h1>图片网格瀑布流布局和打开图片动画特效 <span>Animations for photography grids</span></h1>
 			
 			<nav class="jqthml-demos">
-				<a class="current-demo" href="index.html">Demo 1</a>
+				<a href="index.html">Demo 1</a>
 				<a href="index2.html">Demo 2</a>
-				<a href="index3.html">Demo 3</a>
+				<a class="current-demo" href="index3.html">Demo 3</a>
 				<a href="index4.html">Demo 4</a>
 				<a href="index5.html">Demo 5</a>
 				<a href="index6.html">Demo 6</a>
@@ -147,6 +148,7 @@
 			</div>
 			<!-- /preview -->
 		</div>
+		<!-- /content -->
 		
 	</div>
 	<!-- /container -->
@@ -157,46 +159,61 @@
 	<script src="js/main.js"></script>
 	<script>
 		(function() {
-			// create SVG circle overlay and append it to the preview element
-			function createCircleOverlay(previewEl) {
-				var dummy = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
-				dummy.setAttributeNS(null, 'version', '1.1');
-				dummy.setAttributeNS(null, 'width', '100%');
-				dummy.setAttributeNS(null, 'height', '100%');
-				dummy.setAttributeNS(null, 'class', 'overlay');
-				var g = document.createElementNS('http://www.w3.org/2000/svg', 'g');
-				var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-				circle.setAttributeNS(null, 'cx', 0);
-				circle.setAttributeNS(null, 'cy', 0);
-				circle.setAttributeNS(null, 'r', Math.sqrt(Math.pow(previewEl.offsetWidth,2) + Math.pow(previewEl.offsetHeight,2)));
-				dummy.appendChild(g);
-				g.appendChild(circle);
-				previewEl.appendChild(dummy);
-			}
-			
-			new GridFx(document.querySelector('.grid'), {
-				onInit : function(instance) {
-					createCircleOverlay(instance.previewEl);
-				},
-				onResize : function(instance) {
-					instance.previewEl.querySelector('svg circle').setAttributeNS(null, 'r', Math.sqrt(Math.pow(instance.previewEl.offsetWidth,2) + Math.pow(instance.previewEl.offsetHeight,2)));
-				},
-				onOpenItem : function(instance, item) {
-					// item's image
-					var gridImg = item.querySelector('img'),
-						gridImgOffset = gridImg.getBoundingClientRect(),
-						win = {width: document.documentElement.clientWidth, height: window.innerHeight},
-						SVGCircleGroupEl = instance.previewEl.querySelector('svg > g'),
-						SVGCircleEl = SVGCircleGroupEl.querySelector('circle');
-						
-					SVGCircleEl.setAttributeNS(null, 'r', Math.sqrt(Math.pow(instance.previewEl.offsetWidth,2) + Math.pow(instance.previewEl.offsetHeight,2)));
-					// set the transform for the SVG g node. This will animate the circle overlay. The origin of the circle depends on the position of the clicked item.
-					if( gridImgOffset.left + gridImg.offsetWidth/2 < win.width/2 ) {
-						SVGCircleGroupEl.setAttributeNS(null, 'transform', 'translate(' + win.width + ', ' + (gridImgOffset.top + gridImg.offsetHeight/2 < win.height/2 ? win.height : 0) + ')');
+			var support = { transitions: Modernizr.csstransitions },
+				// transition end event name
+				transEndEventNames = { 'WebkitTransition': 'webkitTransitionEnd', 'MozTransition': 'transitionend', 'OTransition': 'oTransitionEnd', 'msTransition': 'MSTransitionEnd', 'transition': 'transitionend' },
+				transEndEventName = transEndEventNames[ Modernizr.prefixed( 'transition' ) ],
+				onEndTransition = function( el, callback ) {
+					var onEndCallbackFn = function( ev ) {
+						if( support.transitions ) {
+							if( ev.target != this ) return;
+							this.removeEventListener( transEndEventName, onEndCallbackFn );
+						}
+						if( callback && typeof callback === 'function' ) { callback.call(this); }
+					};
+					if( support.transitions ) {
+						el.addEventListener( transEndEventName, onEndCallbackFn );
 					}
 					else {
-						SVGCircleGroupEl.setAttributeNS(null, 'transform', 'translate(0, ' + (gridImgOffset.top + gridImg.offsetHeight/2 < win.height/2 ? win.height : 0) + ')');
+						onEndCallbackFn();
 					}
+				};
+
+			new GridFx(document.querySelector('.grid'), {
+				imgPosition : {
+					x : 1,
+					y : 0.75
+				},
+				pagemargin : 50,
+				onOpenItem : function(instance, item) {
+					instance.items.forEach(function(el) {
+						if(item != el) {
+							var delay = Math.floor(Math.random() * 150);
+							el.style.WebkitTransition = 'opacity .4s ' + delay + 'ms cubic-bezier(.7,0,.3,1), -webkit-transform .4s ' + delay + 'ms cubic-bezier(.7,0,.3,1)';
+							el.style.transition = 'opacity .4s ' + delay + 'ms cubic-bezier(.7,0,.3,1), transform .4s ' + delay + 'ms cubic-bezier(.7,0,.3,1)';
+							
+							el.style.WebkitTransform = 'translate3d(0,400px,0)';
+							el.style.transform = 'translate3d(0,400px,0)';
+							el.style.opacity = 0;
+						}
+					});
+				},
+				onCloseItem : function(instance, item) {
+					instance.items.forEach(function(el) {
+						if(item != el) {
+							el.style.WebkitTransition = 'opacity .3s, -webkit-transform .3s';
+							el.style.transition = 'opacity .3s, transform .3s';
+
+							el.style.WebkitTransform = 'translate3d(0,0,0)';
+							el.style.transform = 'translate3d(0,0,0)';
+							el.style.opacity = 1;
+
+							onEndTransition(el, function() {
+								el.style.transition = 'none';
+								el.style.WebkitTransform = 'none';
+							});
+						}
+					});
 				}
 			});
 		})();
