--- a/waterfall/index4.html
+++ b/waterfall/index4.html
@@ -4,31 +4,52 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>图片网格瀑布流布局和打开图片动画特效</title>
+	<title>图片网格瀑布流布局和打开图片动画特效|DEMO4</title>
+	
 	<link rel="stylesheet" type="text/css" href="http://www.jqhtml.com/jquery/font-awesome.4.6.0.css">
 	<link rel="stylesheet" type="text/css" href="css/default.css">
-	<link rel="stylesheet" type="text/css" href="css/style1.css" />
+	<link rel="stylesheet" type="text/css" href="css/style4.css" />
 	<script src="js/modernizr-custom.js"></script>
 	<!--[if IE]>
 		<script src="http://libs.baidu.com/html5shiv/3.7/html5shiv.min.js"></script>
 	<![endif]-->
 </head>
-<body class="demo-1">
+<body class="demo-4">
 	<div class="container">
 		<header class="jqthml-header">
 			<h1>图片网格瀑布流布局和打开图片动画特效 <span>Animations for photography grids</span></h1>
 			
 			<nav class="jqthml-demos">
-				<a class="current-demo" href="index.html">Demo 1</a>
+				<a href="index.html">Demo 1</a>
 				<a href="index2.html">Demo 2</a>
 				<a href="index3.html">Demo 3</a>
-				<a href="index4.html">Demo 4</a>
+				<a class="current-demo" href="index4.html">Demo 4</a>
 				<a href="index5.html">Demo 5</a>
 				<a href="index6.html">Demo 6</a>
 			</nav>
 		</header>
 		<div class="content">
 			<div class="grid">
+				<div class="grid__item" data-size="1280x853">
+					<a href="img/original/8.jpg" class="img-wrap"><img src="img/thumbs/8.jpg" alt="img08" />
+						<div class="description description--grid">Vestigial</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="865x1280">
+					<a href="img/original/9.jpg" class="img-wrap"><img src="img/thumbs/9.jpg" alt="img09" />
+						<div class="description description--grid">Zephyr</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="1280x1280">
+					<a href="img/original/10.jpg" class="img-wrap"><img src="img/thumbs/10.jpg" alt="img10" />
+						<div class="description description--grid">Desideratum</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="1280x850">
+					<a href="img/original/11.jpg" class="img-wrap"><img src="img/thumbs/11.jpg" alt="img11" />
+						<div class="description description--grid">Quixotic</div>
+					</a>
+				</div>
 				<div class="grid__item" data-size="1280x853">
 					<a href="img/original/1.jpg" class="img-wrap"><img src="img/thumbs/1.jpg" alt="img01" />
 						<div class="description description--grid">Assemblage</div>
@@ -62,6 +83,26 @@
 				<div class="grid__item" data-size="1280x1280">
 					<a href="img/original/7.jpg" class="img-wrap"><img src="img/thumbs/7.jpg" alt="img07" />
 						<div class="description description--grid">Scintilla</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="1280x853">
+					<a href="img/original/8.jpg" class="img-wrap"><img src="img/thumbs/8.jpg" alt="img08" />
+						<div class="description description--grid">Vestigial</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="865x1280">
+					<a href="img/original/9.jpg" class="img-wrap"><img src="img/thumbs/9.jpg" alt="img09" />
+						<div class="description description--grid">Zephyr</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="1280x1280">
+					<a href="img/original/10.jpg" class="img-wrap"><img src="img/thumbs/10.jpg" alt="img10" />
+						<div class="description description--grid">Desideratum</div>
+					</a>
+				</div>
+				<div class="grid__item" data-size="1280x850">
+					<a href="img/original/11.jpg" class="img-wrap"><img src="img/thumbs/11.jpg" alt="img11" />
+						<div class="description description--grid">Quixotic</div>
 					</a>
 				</div>
 				<div class="grid__item" data-size="1280x853">
@@ -143,10 +184,24 @@
 			<!-- /grid -->
 			<div class="preview">
 				<button class="action action--close"><i class="fa fa-times"></i><span class="text-hidden">Close</span></button>
+				<div class="thumbs">
+					<button class="action action--nav action--navprev"><i class="fa fa-chevron-left"></i><span class="text-hidden">Previous</span></button>
+					<img src="img/thumbs_dummies/1.jpg" alt="01" />
+					<img src="img/thumbs_dummies/2.jpg" alt="02" />
+					<img src="img/thumbs_dummies/3.jpg" alt="03" />
+					<img src="img/thumbs_dummies/4.jpg" alt="04" />
+					<img src="img/thumbs_dummies/5.jpg" alt="05" />
+					<img src="img/thumbs_dummies/6.jpg" alt="06" />
+					<img src="img/thumbs_dummies/7.jpg" alt="07" />
+					<img src="img/thumbs_dummies/8.jpg" alt="08" />
+					<img src="img/thumbs_dummies/9.jpg" alt="09" />
+					<button class="action action--nav action--navnext"><i class="fa fa-chevron-right"></i><span class="text-hidden">Next</span></button>
+				</div>
 				<div class="description description--preview"></div>
 			</div>
 			<!-- /preview -->
 		</div>
+		<!-- /content -->
 		
 	</div>
 	<!-- /container -->
@@ -157,46 +212,64 @@
 	<script src="js/main.js"></script>
 	<script>
 		(function() {
-			// create SVG circle overlay and append it to the preview element
-			function createCircleOverlay(previewEl) {
-				var dummy = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
-				dummy.setAttributeNS(null, 'version', '1.1');
-				dummy.setAttributeNS(null, 'width', '100%');
-				dummy.setAttributeNS(null, 'height', '100%');
-				dummy.setAttributeNS(null, 'class', 'overlay');
-				var g = document.createElementNS('http://www.w3.org/2000/svg', 'g');
-				var circle = document.createElementNS("http://www.w3.org/2000/svg", "circle");
-				circle.setAttributeNS(null, 'cx', 0);
-				circle.setAttributeNS(null, 'cy', 0);
-				circle.setAttributeNS(null, 'r', Math.sqrt(Math.pow(previewEl.offsetWidth,2) + Math.pow(previewEl.offsetHeight,2)));
-				dummy.appendChild(g);
-				g.appendChild(circle);
-				previewEl.appendChild(dummy);
-			}
-			
-			new GridFx(document.querySelector('.grid'), {
-				onInit : function(instance) {
-					createCircleOverlay(instance.previewEl);
-				},
-				onResize : function(instance) {
-					instance.previewEl.querySelector('svg circle').setAttributeNS(null, 'r', Math.sqrt(Math.pow(instance.previewEl.offsetWidth,2) + Math.pow(instance.previewEl.offsetHeight,2)));
-				},
-				onOpenItem : function(instance, item) {
-					// item's image
-					var gridImg = item.querySelector('img'),
-						gridImgOffset = gridImg.getBoundingClientRect(),
-						win = {width: document.documentElement.clientWidth, height: window.innerHeight},
-						SVGCircleGroupEl = instance.previewEl.querySelector('svg > g'),
-						SVGCircleEl = SVGCircleGroupEl.querySelector('circle');
-						
-					SVGCircleEl.setAttributeNS(null, 'r', Math.sqrt(Math.pow(instance.previewEl.offsetWidth,2) + Math.pow(instance.previewEl.offsetHeight,2)));
-					// set the transform for the SVG g node. This will animate the circle overlay. The origin of the circle depends on the position of the clicked item.
-					if( gridImgOffset.left + gridImg.offsetWidth/2 < win.width/2 ) {
-						SVGCircleGroupEl.setAttributeNS(null, 'transform', 'translate(' + win.width + ', ' + (gridImgOffset.top + gridImg.offsetHeight/2 < win.height/2 ? win.height : 0) + ')');
+			var support = { transitions: Modernizr.csstransitions },
+				// transition end event name
+				transEndEventNames = { 'WebkitTransition': 'webkitTransitionEnd', 'MozTransition': 'transitionend', 'OTransition': 'oTransitionEnd', 'msTransition': 'MSTransitionEnd', 'transition': 'transitionend' },
+				transEndEventName = transEndEventNames[ Modernizr.prefixed( 'transition' ) ],
+				onEndTransition = function( el, callback ) {
+					var onEndCallbackFn = function( ev ) {
+						if( support.transitions ) {
+							if( ev.target != this ) return;
+							this.removeEventListener( transEndEventName, onEndCallbackFn );
+						}
+						if( callback && typeof callback === 'function' ) { callback.call(this); }
+					};
+					if( support.transitions ) {
+						el.addEventListener( transEndEventName, onEndCallbackFn );
 					}
 					else {
-						SVGCircleGroupEl.setAttributeNS(null, 'transform', 'translate(0, ' + (gridImgOffset.top + gridImg.offsetHeight/2 < win.height/2 ? win.height : 0) + ')');
+						onEndCallbackFn();
 					}
+				};
+
+			new GridFx(document.querySelector('.grid'), {
+				imgPosition : {
+					x : 1,
+					y : -0.75
+				},
+				onOpenItem : function(instance, item) {
+					var win = {width: window.innerWidth, height: window.innerHeight};
+					instance.items.forEach(function(el) {
+						if(item != el) {
+							var delay = Math.floor(Math.random() * 130);
+							el.style.WebkitTransition = 'opacity .5s ' + delay + 'ms cubic-bezier(.7,0,.3,1), -webkit-transform .5s ' + delay + 'ms cubic-bezier(.7,0,.3,1)';
+							el.style.transition = 'opacity .5s ' + delay + 'ms cubic-bezier(.7,0,.3,1), transform .5s ' + delay + 'ms cubic-bezier(.7,0,.3,1)';
+							
+							var elOffset = el.getBoundingClientRect(),
+								elSize = {width : el.offsetWidth, height : el.offsetHeight};
+
+							el.style.WebkitTransform = 'translate3d(' + (win.width/2 - elOffset.left - elSize.width/2) + 'px,' + (win.height - elOffset.top - elSize.height/2) + 'px,0) scale3d(0,0,1)';
+							el.style.transform = 'translate3d(' + (win.width/2 - elOffset.left - elSize.width/2) + 'px,' + (win.height - elOffset.top - elSize.height/2) + 'px,0) scale3d(0,0,1)';
+							el.style.opacity = 0;
+						}
+					});
+				},
+				onCloseItem : function(instance, item) {
+					instance.items.forEach(function(el) {
+						if(item != el) {
+							el.style.WebkitTransition = 'opacity .3s, -webkit-transform .3s';
+							el.style.transition = 'opacity .3s, transform .3s';
+
+							el.style.WebkitTransform = 'translate3d(0,0,0) scale3d(1,1,1)';
+							el.style.transform = 'translate3d(0,0,0) scale3d(1,1,1)';
+							el.style.opacity = 1;
+
+							onEndTransition(el, function() {
+								el.style.transition = 'none';
+								el.style.WebkitTransform = 'none';
+							});
+						}
+					});
 				}
 			});
 		})();
