--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					<div style="text-align: center;">
 						<a href="https://map.qq.com/" target="_blank" style="padding: 10px;">腾讯地图</a>
 						<a href="https://pay.weixin.qq.com" target="_blank" style="padding: 10px;">微信支付</a>
-						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
-						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">公众平台</a>
+						<a href="https://developers.weixin.qq.com" target="_blank" style="padding: 10px;">微信开发平台</a>
 						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
 						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
 					</div>
