--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
 						<a href="https://pay.weixin.qq.com" target="_blank" style="padding: 10px;">微信支付</a>
 						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">公众平台</a>
 						<a href="https://developers.weixin.qq.com" target="_blank" style="padding: 10px;">微信开发平台</a>
-						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
-						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">微信公众号</a>
+						<a href="https://work.weixin.qq.com" target="_blank" style="padding: 10px;">企业微信</a>
+						<a href="https://docs.qq.com" target="_blank" style="padding: 10px;">腾讯文档</a>
+						<a href="http://www.lixiaocrm.com" target="_blank" style="padding: 10px;">励销</a>
+						<a href="https://alipay.020leader.com" target="_blank" style="padding: 10px;">移领统一平台</a>
+						<a href="http://t.020leader.com" target="_blank" style="padding: 10px;">移领服务商平台</a>
+						http://www.lixiaocrm.com/
 					</div>
 				</div>
 				<div id="Handy" class="container tab-pane fade"><br>
