--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 						<a class="nav-link" data-toggle="tab" href="#Handy">常用</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" data-toggle="tab" href="#Study">学习</a>
+					</li>
+					<li class="nav-item">
 						<a class="nav-link" data-toggle="tab" href="#Work">工作</a>
 					</li>
 					<li class="nav-item">
@@ -48,19 +51,53 @@
 				<div id="Home" class="container tab-pane active"><br>
 					<h3>HOME</h3>
 					<div style="text-align: center;">
-						<a href="https://map.qq.com/" target="_blank" style="padding: 10px;">腾讯地图</a>
 						<a href="https://pay.weixin.qq.com" target="_blank" style="padding: 10px;">微信支付</a>
 						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">公众平台</a>
 						<a href="https://developers.weixin.qq.com" target="_blank" style="padding: 10px;">微信开发平台</a>
 						<a href="https://work.weixin.qq.com" target="_blank" style="padding: 10px;">企业微信</a>
 						<a href="https://docs.qq.com" target="_blank" style="padding: 10px;">腾讯文档</a>
+
+					</div>
+				</div>
+				<div id="Study" class="container tab-pane fade"><br>
+					<h3>Study</h3>
+					<div style="text-align: center;">
+						<a href="https://map.qq.com/" target="_blank" style="padding: 10px;">腾讯地图</a>
+						<a href="https://www.baidu.com" target="_blank" style="padding: 10px;">百度</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">公众平台</a>
+						<a href="https://developers.weixin.qq.com" target="_blank" style="padding: 10px;">微信开发平台</a>
+						<a href="https://work.weixin.qq.com" target="_blank" style="padding: 10px;">企业微信</a>
+						<a href="https://docs.qq.com" target="_blank" style="padding: 10px;">腾讯文档</a>
+						<a href="http://www.lixiaocrm.com" target="_blank" style="padding: 10px;">励销</a>
+					</div>
+				</div>
+				<div id="Handy" class="container tab-pane fade"><br>
+					<h3>Handy</h3>
+					<div style="text-align: center;">
+						<a href="https://map.qq.com/" target="_blank" style="padding: 10px;">腾讯地图</a>
+						<a href="https://www.baidu.com" target="_blank" style="padding: 10px;">百度</a>
+						<a href="https://mp.weixin.qq.com" target="_blank" style="padding: 10px;">公众平台</a>
+						<a href="https://developers.weixin.qq.com" target="_blank" style="padding: 10px;">微信开发平台</a>
+						<a href="https://work.weixin.qq.com" target="_blank" style="padding: 10px;">企业微信</a>
+						<a href="https://docs.qq.com" target="_blank" style="padding: 10px;">腾讯文档</a>
+						<a href="http://www.lixiaocrm.com" target="_blank" style="padding: 10px;">励销</a>
+					</div>
+				</div>
+				<div id="Work" class="container tab-pane fade"><br>
+					<h3>Work</h3>
+					<div style="text-align: center;">
+						<a href="https://cloud.tencent.com" target="_blank" style="padding: 10px;">腾讯云</a>
+						<a href="https://www.aliyun.com" target="_blank" style="padding: 10px;">阿里云</a>
+						<a href="https://cloud.baidu.com" target="_blank" style="padding: 10px;">百度云</a>
+						<a href="https://www.163yun.com" target="_blank" style="padding: 10px;">网易云</a>
+						<a href="https://www.huaweicloud.com" target="_blank" style="padding: 10px;">华为云</a>
 						<a href="http://www.lixiaocrm.com" target="_blank" style="padding: 10px;">励销</a>
 						<a href="https://alipay.020leader.com" target="_blank" style="padding: 10px;">移领统一平台</a>
 						<a href="http://t.020leader.com" target="_blank" style="padding: 10px;">移领服务商平台</a>
 					</div>
 				</div>
-				<div id="Handy" class="container tab-pane fade"><br>
-					<h3>Menu 1</h3>
+				<div id="Fun" class="container tab-pane fade"><br>
+					<h3>Fun</h3>
 					<!-- 折叠菜单开始 -->
 					<div id="accordion">
 						<div class="card">
@@ -94,39 +131,30 @@
 							</div>
 						</div>
 					</div>
+
+					<!-- 折叠菜单结束 -->
 				</div>
-				<!-- 折叠菜单结束 -->
+				<div id="Request" class="container tab-pane fade"><br>
+					<h3>Request</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+						aperiam.</p>
+				</div>
+				<div id="Issues" class="container tab-pane fade"><br>
+					<h3>Issues</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+						aperiam.</p>
+				</div>
+				<div id="Marketplace" class="container tab-pane fade"><br>
+					<h3>Marketplace</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+						aperiam.</p>
+				</div>
+				<div id="Explore" class="container tab-pane fade"><br>
+					<h3>Explore</h3>
+					<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+						aperiam.</p>
+				</div>
 			</div>
-			<div id="Work" class="container tab-pane fade"><br>
-				<h3>Menu 2</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam remaperiam.</p>
-			</div>
-			<div id="Fun" class="container tab-pane fade"><br>
-				<h3>Fun</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-					aperiam.</p>
-			</div>
-			<div id="Request" class="container tab-pane fade"><br>
-				<h3>Request</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-					aperiam.</p>
-			</div>
-			<div id="Issues" class="container tab-pane fade"><br>
-				<h3>Issues</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-					aperiam.</p>
-			</div>
-			<div id="Marketplace" class="container tab-pane fade"><br>
-				<h3>Marketplace</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-					aperiam.</p>
-			</div>
-			<div id="Explore" class="container tab-pane fade"><br>
-				<h3>Explore</h3>
-				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
-					aperiam.</p>
-			</div>
-		</div>
 		</div>
 
 	</body>
