--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<!-- 卡片一开始 -->
 						<div class="card">
 							<a class="card-link card-header" data-toggle="collapse" href="#collapseOne" style="text-align: center;">
-								工作
+								常用生活办公
 							</a>
 							<div id="collapseOne" class="collapse show" data-parent="#accordion">
 								<div class="card-body flexcenter">
@@ -82,12 +82,6 @@
 									<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
 									<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
 									<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
-									<a href="https://docs.qq.com" target="_blank" class="atarget">腾讯文档</a>
-									<a href="https://cloud.tencent.com" target="_blank" class="atarget">腾讯云</a>
-									<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
-									<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
-									<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
-
 								</div>
 							</div>
 						</div>
@@ -95,21 +89,32 @@
 
 						<div class="card">
 							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTwo" style="text-align: center;">
-								选项二
+								学习平台管理
 							</a>
 							<div id="collapseTwo" class="collapse" data-parent="#accordion">
 								<div class="card-body">
 									#2 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+									<div class="card-body flexcenter">
+										<a href="https://pay.weixin.qq.com" target="_blank" class="atarget">微信支付</a>
+										<a href="https://mp.weixin.qq.com" target="_blank" class="atarget">公众平台</a>
+										<a href="https://developers.weixin.qq.com" target="_blank" class="atarget">微信开发平台</a>
+										<a href="https://work.weixin.qq.com" target="_blank" class="atarget">企业微信</a>
+										<a href="https://docs.qq.com" target="_blank" class="atarget">腾讯文档</a>
+										<a href="https://cloud.tencent.com" target="_blank" class="atarget">腾讯云</a>
+										<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
+										<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
+										<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
+									</div>
 								</div>
 							</div>
 						</div>
 						<div class="card">
 							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseThree" style="text-align: center;">
-								选项三
+								网络后台编辑
 							</a>
 							<div id="collapseThree" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="https://github.com" target="_blank" class="atarget">Github</a>
 								</div>
 							</div>
 						</div>
