--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							</a>
 							<div id="collapseTwo" class="collapse" data-parent="#accordion">
 								<div class="card-body">
-									#2 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+									#2 内容：学习平台管理
 									<div class="card-body flexcenter">
 										<a href="https://pay.weixin.qq.com" target="_blank" class="atarget">微信支付</a>
 										<a href="https://mp.weixin.qq.com" target="_blank" class="atarget">公众平台</a>
@@ -198,6 +198,76 @@
 								选项三
 							</a>
 							<div id="collapseThree" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFour" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseFour" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFive" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseFive" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSix" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseSix" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSeven" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseSeven" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseEight" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseEight" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseNine" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseNine" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTen" style="text-align: center;">
+								选项三
+							</a>
+							<div id="collapseTen" class="collapse" data-parent="#accordion">
 								<div class="card-body">
 									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
 								</div>
