--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 									<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
 									<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
 									<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
+									<a href="http://waxuan.deepin.online" target="_blank" class="atarget">GitOnline</a>
+									<a href="http://www.deepin.online" target="_blank" class="atarget">DeepinOline</a>
 								</div>
 							</div>
 						</div>
 						<!-- 卡片一结束 -->
-
 						<div class="card">
 							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTwo" style="text-align: center;">
 								学习平台管理
@@ -118,10 +119,78 @@
 								</div>
 							</div>
 						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFour" style="text-align: center;">
+								选项四
+							</a>
+							<div id="collapseFour" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFive" style="text-align: center;">
+								选项五
+							</a>
+							<div id="collapseFive" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSix" style="text-align: center;">
+								选项六
+							</a>
+							<div id="collapseSix" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSeven" style="text-align: center;">
+								选项七
+							</a>
+							<div id="collapseSeven" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseEight" style="text-align: center;">
+								选项八
+							</a>
+							<div id="collapseEight" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseNine" style="text-align: center;">
+								选项九
+							</a>
+							<div id="collapseNine" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
+						<div class="card">
+							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTen" style="text-align: center;">
+								选项十
+							</a>
+							<div id="collapseTen" class="collapse" data-parent="#accordion">
+								<div class="card-body">
+									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								</div>
+							</div>
+						</div>
 					</div>
-
 					<!-- 折叠菜单结束 -->
-
 				</div>
 				<div id="Study" class="container tab-pane fade"><br>
 					<h3>Study</h3>
@@ -162,120 +231,7 @@
 				</div>
 				<div id="Fun" class="container tab-pane fade"><br>
 					<h3>Fun</h3>
-					<!-- 折叠菜单开始 -->
-					<div id="accordion">
-						<div class="card">
-							<a class="card-link card-header" data-toggle="collapse" href="#collapseOne" style="text-align: center;">
-								工作
-							</a>
-							<div id="collapseOne" class="collapse show" data-parent="#accordion">
-								<div class="card-body">
-									<div style="text-align: center;">
-										<a href="https://cloud.tencent.com" target="_blank" style="padding: 10px;">腾讯云</a>
-										<a href="https://www.aliyun.com" target="_blank" style="padding: 10px;">阿里云</a>
-										<a href="https://cloud.baidu.com" target="_blank" style="padding: 10px;">百度云</a>
-										<a href="https://www.163yun.com" target="_blank" style="padding: 10px;">网易云</a>
-										<a href="https://www.huaweicloud.com" target="_blank" style="padding: 10px;">华为云</a><br>
-										<a href="http://www.lixiaocrm.com" target="_blank" style="padding: 10px;">励销</a>
-										<a href="https://alipay.020leader.com" target="_blank" style="padding: 10px;">移领统一平台</a>
-										<a href="http://t.020leader.com" target="_blank" style="padding: 10px;">移领服务商平台</a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTwo" style="text-align: center;">
-								选项二
-							</a>
-							<div id="collapseTwo" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#2 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseThree" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseThree" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFour" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseFour" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseFive" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseFive" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSix" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseSix" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseSeven" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseSeven" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseEight" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseEight" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseNine" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseNine" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-						<div class="card">
-							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTen" style="text-align: center;">
-								选项三
-							</a>
-							<div id="collapseTen" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
-								</div>
-							</div>
-						</div>
-					</div>
 
-					<!-- 折叠菜单结束 -->
 				</div>
 				<div id="Request" class="container tab-pane fade"><br>
 					<h3>Request</h3>
@@ -299,6 +255,5 @@
 				</div>
 			</div>
 		</div>
-
 	</body>
 </html>
