--- a/index.html
+++ b/index.html
@@ -12,9 +12,19 @@
 	</head>
 	<style type="text/css">
 		.atarget {
-			padding: 10px;
+			text-decoration:none;
+			padding: 3px 10px;
+			margin: 10px;
+			border: 1px solid #ccc;
+			border-radius: 6px;
 		}
-
+		.atarget:hover {
+			color: ghostwhite;
+			font-size:100%;
+			text-decoration:none;
+			border-radius: 10px;
+			background-color:#FF8901;
+		}
 		.flexcenter {
 			display: flex;
 			flex-flow: row wrap;
@@ -63,13 +73,13 @@
 			<!-- Tab panes -->
 			<div class="tab-content">
 				<div id="Home" class="container tab-pane active"><br>
-					<h3>HOME</h3>
+					<!-- 首页HOME开始 -->
 					<!-- 折叠菜单开始 -->
 					<div id="accordion">
 						<!-- 卡片一开始 -->
 						<div class="card">
 							<a class="card-link card-header" data-toggle="collapse" href="#collapseOne" style="text-align: center;">
-								常用生活办公
+								One:常用+生活+办公
 							</a>
 							<div id="collapseOne" class="collapse show" data-parent="#accordion">
 								<div class="card-body flexcenter">
@@ -84,16 +94,29 @@
 									<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
 									<a href="http://waxuan.deepin.online" target="_blank" class="atarget">GitOnline</a>
 									<a href="http://www.deepin.online" target="_blank" class="atarget">DeepinOline</a>
+									<a href="https://docs.qq.com/doc/DZHFRRXVHS0xGaWRa" target="_blank" class="atarget">问题列表</a>
 								</div>
 							</div>
 						</div>
 						<!-- 卡片一结束 -->
 						<div class="card">
 							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseTwo" style="text-align: center;">
-								学习平台管理
+								Two：学习+平台+管理
 							</a>
 							<div id="collapseTwo" class="collapse" data-parent="#accordion">
 								<div class="card-body">
+									#1 内容：学习平台管理
+									<div class="card-body flexcenter">
+										<a href="https://pay.weixin.qq.com" target="_blank" class="atarget">微信支付</a>
+										<a href="https://mp.weixin.qq.com" target="_blank" class="atarget">公众平台</a>
+										<a href="https://developers.weixin.qq.com" target="_blank" class="atarget">微信开发平台</a>
+										<a href="https://work.weixin.qq.com" target="_blank" class="atarget">企业微信</a>
+										<a href="https://docs.qq.com" target="_blank" class="atarget">腾讯文档</a>
+										<a href="https://cloud.tencent.com" target="_blank" class="atarget">腾讯云</a>
+										<a href="http://www.lixiaocrm.com" target="_blank" class="atarget">励销</a>
+										<a href="https://alipay.020leader.com" target="_blank" class="atarget">移领统一平台</a>
+										<a href="http://t.020leader.com" target="_blank" class="atarget">移领服务商平台</a>
+									</div>
 									#2 内容：学习平台管理
 									<div class="card-body flexcenter">
 										<a href="https://pay.weixin.qq.com" target="_blank" class="atarget">微信支付</a>
@@ -111,7 +134,7 @@
 						</div>
 						<div class="card">
 							<a class="collapsed card-link card-header" data-toggle="collapse" href="#collapseThree" style="text-align: center;">
-								网络后台编辑
+								Tree：网络+后台+编辑
 							</a>
 							<div id="collapseThree" class="collapse" data-parent="#accordion">
 								<div class="card-body flexcenter">
@@ -124,8 +147,8 @@
 								选项四
 							</a>
 							<div id="collapseFour" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -134,8 +157,8 @@
 								选项五
 							</a>
 							<div id="collapseFive" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -144,8 +167,8 @@
 								选项六
 							</a>
 							<div id="collapseSix" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -154,8 +177,8 @@
 								选项七
 							</a>
 							<div id="collapseSeven" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -164,8 +187,8 @@
 								选项八
 							</a>
 							<div id="collapseEight" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -174,8 +197,8 @@
 								选项九
 							</a>
 							<div id="collapseNine" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
@@ -184,8 +207,8 @@
 								选项十
 							</a>
 							<div id="collapseTen" class="collapse" data-parent="#accordion">
-								<div class="card-body">
-									#3 内容：菜鸟教程 -- 学的不仅是技术，更是梦想！！！
+								<div class="card-body flexcenter">
+									<a href="http://www.ynxxwfw.com" target="_blank" class="atarget">偕行官网</a>
 								</div>
 							</div>
 						</div>
